fixed + and - not working in hostname, switched from runtime to processbuilder